@@ -9,3 +9,4 @@
 ^lib$
 ^lib64$
 ^example.+/
+^tmp$
