@@ -1,3 +1,11 @@
+2015-05-03  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add bin/prof-ipol simple script using the functions below -- to be merged with prof-interpolate.
+
+	* professor2/__init__.py: Add Histo, DataBin, IpolBin and basic data handling functions.
+
+	* Remove unnecessary dlopen fiddling from professor2/__init__.py
+
 2015-04-23  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Remove bound ParamPoints pointer from Ipol, and ditch lazy coeff evaluation in favour of simplicity and construct-time coeff calculating.
